--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,8 @@
+name: Uno-Q-video-detector
+description: ""
+ports: []
+bricks:
+- arduino:video_object_detection:
+    model: yolox-object-detection
+icon: 😀
 
